--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,9 @@
-# 生产环境的配置文件
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/java_gobang?characterEncoding=utf8&useSSL=false
-    usernameL: root
+    username: root
     password: 111111
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-# mybatis xml的保存路径
 mybatis:
   mapper-locations: classpath:mapper/**Mapper.xml
-  configuration: #配置打印 MyBatis执行的SQL
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-# 配置打印 MyBatis 执行的SQL
-logging:
-  level:
-    com:
-      example:
-        demo: debug
