--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/java_gobang?characterEncoding=utf8&useSSL=false
     username: root
-    password: 111111
+    # 数据库没有密码的情况下，设置成""
+    password: ""
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
