--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,11 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/java_gobang?characterEncoding=utf8&useSSL=false
     username: root
-    # 数据库没有密码的情况下，设置成""
+    # 数据库没有密码的情况下，设置成""，在deploy到腾讯云的CentOS 7的linux服务器上
+    # 本地电脑的话，就写自己设置的MySQL的密码
     password: ""
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+# 要在哪个路径下，加载这个配置文件
 mybatis:
   mapper-locations: classpath:mapper/**Mapper.xml
